--- a/src/shared/Calender/Sample.css
+++ b/src/shared/Calender/Sample.css
@@ -1,14 +1,14 @@
 .react-calendar {
   border: none;
   background: transparent;
-  height: 340px;
-
-
+  height: 315px;
   width: 420px;
 }
 
 .react-calendar__navigation {
   text-align: center !important;
+  margin-bottom: 0.5em;
+  padding-top: 1.8rem;
 }
 .react-calendar__viewContainer {
   padding: 0 1rem 1rem 1rem;
@@ -18,7 +18,7 @@
   color: #19a7ce;
   min-width: 44px;
   background: none;
-  font-size: 18px;
+  font-size: 16px;
   padding: 10px;
   height: 40px;
   font-weight: bold;
@@ -75,22 +75,26 @@ abbr[title] {
 }
 .react-calendar button:enabled:hover {
   cursor: pointer;
-  background-color: #98b4d1 !important;
+  background-color: #98b4d19a !important;
   border-radius: 5px;
   padding: 0;
 }
 .react-calendar__navigation {
   display: flex;
-  padding: 1.5rem 4rem 2.5rem 4rem;
-  margin-bottom: 1em;
+  /* margin: 0 1rem 0.5rem 1rem; */
+  /* padding: 2rem 2rem;
+  margin-bottom: 1em; */
 }
 .react-calendar__navigation button {
-  min-width: 40px !important;
-  /* background: none; */
+  min-width: 35px !important;
+  background: none!important;
 }
+/* .react-calendar__navigation__arrow.react-calendar__navigation__next-button{
+  margin: 0 0.5rem!important;
+} */
 .react-calendar__navigation button:enabled:hover {
   background-color: none;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 button.react-calendar_navigation_label {
   pointer-events: none !important;
@@ -180,12 +184,8 @@ div.react-calendar_year-view_months {
   border-radius: 5px;
 }
 
-@media only screen and (max-width: 975px) {
-  .react-calendar,
-  .times {
-    width: 460px !important;
-  }
-}
+
+
 @media only screen and (max-width: 890px) {
   .react-calendar,
   .times {
@@ -201,7 +201,7 @@ div.react-calendar_year-view_months {
     width: 410px !important;
   }
   .react-calendar__viewContainer {
-    padding: 0 !important;
+    padding: 1rem !important;
   }
   .react-calendar__navigation {
     padding: 1.5rem 3rem 0.5rem 3rem !important;
@@ -210,72 +210,10 @@ div.react-calendar_year-view_months {
     margin: 0.5rem 0rem 0.2rem 0rem !important;
   }
 }
-@media only screen and (max-width: 790px) {
-  .react-calendar,
-  .times {
-    width: 400px !important;
-  }
-  .react-calendar__navigation {
-    padding: 1.5rem 2rem 0.5rem 2rem !important;
-  }
-}
-@media only screen and (max-width: 760px) {
-  .react-calendar,
-  .times {
-    width: 390px !important;
-  }
-  .date-p {
-    font-size: 15px !important;
-  }
-  .set-p {
-    font-size: 13px !important;
-  }
-}
-@media only screen and (max-width: 730px) {
-  .react-calendar,
-  .times {
-    width: 370px !important;
-  }
-  .time-btn {
-    padding: 8px 16px !important;
-  }
-  .timeslot-div {
-    max-height: 175px !important;
-    padding: 0.5rem 1rem !important;
-  }
-}
-@media only screen and (max-width: 690px) {
-  .react-calendar,
-  .times {
-    width: 350px !important;
-  }
-  .timeslot-div {
-    padding: 0.5rem 0.5rem !important;
-  }
-}
-@media only screen and (max-width: 630px) {
-  .react-calendar {
-    margin: auto !important;
-    height: 353px !important;
-    width: 83% !important;
-  }
-  .times {
-    height: 353px !important;
-    width: 102.5% !important;
-  }
-  .timeslot-div {
-    padding: 0.5rem 3rem !important;
-  }
-  .space {
-    margin: 0.5rem 0.2rem 0.2rem 0.2rem !important;
-  }
-  .set-p {
-    font-size: 13.5px !important;
-  }
-  .time-btn {
-    padding: 8px 20px !important;
-  }
-}
+
+
+
+
 @media only screen and (max-width: 600px) {
   .timeslot-div {
     padding: 0.5rem 2rem !important;
